changes to css across all pages and tidying code to ensure each page is within a container-fluid for consistant look on mobile view. changes to styling of springboard page to fit the feel of the main site better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ font-family: 'Montserrat', sans-serif;
 font-family: 'Roboto', sans-serif; */
 
 .container-fluid {
-    background-color: #fafafa;
+    background-color: #f1f1f1;
 }
 /* curtain nav bar */
 .overlay {
@@ -110,7 +110,7 @@ font-family: 'Roboto', sans-serif; */
     font-family: 'Roboto', sans-serif;
     color: white;
 }
-/* homepage - my journer/philosophy section */
+/* homepage - my journey/philosophy section */
 .about-me-section {
     padding: 40px 0px;
 }
@@ -158,9 +158,9 @@ font-family: 'Roboto', sans-serif; */
 }
 .card p img {
     float: right;
-    width: 250px;
-    height: 250px;
-    margin: 0px 10px;
+    width: 200px;
+    height: 200px;
+    margin: 15px 0px;
     border-radius: 250px;
 }
 .card button {
@@ -186,7 +186,7 @@ font-family: 'Roboto', sans-serif; */
     border: solid 1.5px #888888;
     margin-top: 20px;
     padding: 10px 50px;
-}
+ }
 .therapies-page-link a {
     color: rgb(190, 140, 136);
 }
@@ -298,6 +298,9 @@ font-family: 'Roboto', sans-serif; */
     padding: 10px 0px;
     margin: 0px 53px;
 }
+.image-text p {
+    font-size: small;
+}
 .image-text:hover {
     text-align: center;
     color: white;
@@ -310,8 +313,15 @@ font-family: 'Roboto', sans-serif; */
     color: white;
     background:  rgba(43, 126, 43, 0.829);
 }
-.therapy-info {
+.therapy-info p {
     font-family: 'Comfortaa', cursive;
+    color: grey;
+}
+.therapy-info p a {
+    font-family: 'Comfortaa', cursive;
+    color: rgba(43, 126, 43, 0.829);
+}
+.therapy-info p a:hover {
     color: grey;
 }
 .back-to-therapies button {
@@ -319,7 +329,7 @@ font-family: 'Roboto', sans-serif; */
     color: grey;
     background:  rgba(224, 226, 224, 0.829);
 }
-/* therapies-testimonials */
+/* therapies page testimonials */
 .testimonial-section {
     width: 100%;
     background-position: center;
@@ -469,35 +479,41 @@ font-family: 'Roboto', sans-serif; */
     font-weight: bold;
 }
 /* springboard-page */
-.springboard {
-    background-color: #fafafa;
+.container-fluid-sb {
+    background-color: rgba(187, 182, 204, 0.459);
 }
 .springboard-image {
-    background: url('../images/springboard/jumping.jpg');
+    background: url('../images/springboard/leaping2.jpg');
     width:100%;
     height:600px;
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
     background-attachment: scroll;
+    border-top: solid 2px white;
+    border-bottom: solid 2px white;
 }
-.sb-mainheading h1 {
+.springboard-image-text {
     text-align: center;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.springboard-image-text h1 {
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 8px;
-    color: #6B55AC;
+    color: white;
     text-shadow: 1px 1px 1px black, 0 0 20px black;
-    font-size: 48px;
-    margin-top: 40px;
+    font-size: 50px;
+    border-bottom: solid 2px white;
 }
-.sb-mainheading p {
-    text-align: center;
+.springboard-image-text p {
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 8px;
-    color: #6B55AC;
+    color: white;
     text-shadow: 1px 1px 1px black, 0 0 20px black;
-    font-size: 20px;
-    margin-top: 12px;
+    font-size: 30px;
 }
 .sb-main-text {
     font-family: 'Montserrat', sans-serif;
@@ -505,21 +521,22 @@ font-family: 'Roboto', sans-serif; */
     padding-top: 30px;
     padding-bottom: 30px;
 }
-.sb-main-text h5 {
-    color:#6B55AC;
-    padding: 15px 30px
+.sb-main-text h3 {
+    color:rgb(80, 64, 131);
+    padding: 30px;
 }
 .sb-main-text p {
     padding: 12px 20px;
 }
 .about-us-title {
     font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
     text-align: center;
-    color:#6B55AC;
+    color:white;
     padding-bottom: 30px;
-    border-bottom: solid 0.5px #6B55AC;
+    border-bottom: solid 2px white;
     padding-top: 30px;
-    background-color: rgb(238, 240, 243);
+    background-color: rgba(187, 182, 204, 0.74);
 }
 .about-us-details img {
     width: 50%;
@@ -528,14 +545,15 @@ font-family: 'Roboto', sans-serif; */
     margin-left: auto;
     margin-right: auto;
     border-radius: 10%;
-    padding-top: 30px;
+    margin-top: 30px;
+    box-shadow: 5px 10px 40px grey;
 }
 .about-us-details h5 {
     font-family: 'Montserrat', sans-serif;
     font-size: 35px;
     text-align: center;
-    color: #6B55AC;
-    text-shadow: 2px 2px 5px #6b55ac;
+    color: rgb(80, 64, 131);
+    text-shadow: 2px 2px 5px black;
     letter-spacing: 3px;
     padding: 25px;
 }
@@ -544,30 +562,50 @@ font-family: 'Roboto', sans-serif; */
     text-align: center;
     padding: 30px 50px;
 }
-.weekend-workshops {
+.weekend-workshops-title {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    color:white;
+    padding-bottom: 30px;
+    border-bottom: solid 2px white;
+    padding-top: 30px;
+    background-color: rgba(187, 182, 204, 0.74);
+}
+.weekend-workshops-text {
     font-family: 'Montserrat', sans-serif;
     text-align: center;
-    margin-top: 30px;
-    padding: 30px 0px;
+    padding: 35px 0px;
 }
-.weekend-workshops p {
-    padding: 10px 40px;
+.weekend-workshops-text p {
+padding: 25px 40px;
+}
+.weekend-workshops-text p a {
+color: rgb(80, 64, 131);
+text-decoration: underline;
+}
+.weekend-workshops-text p a:hover {
+color: white;
 }
 /* springboard footer */
 .springboard-footer {
-    border-top: solid 0.5px rgb(167, 162, 162, .8);
-    background-color: #7E71C2;
-    color: #fafafa;
+    border-top: solid 2px white;
+    background-color: rgba(187, 182, 204, 0.74);
+    color: white;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     padding-top: 20px;
 }
 .springboard-footer a {
-    color: rgb(75, 73, 73);
+    color: #6B55AC;
+    font-weight: bold;
+}
+.springboard-footer a:hover {
+    color: white;
 }
 .springboard-copywrite {
     color: white;
-    background-color: #7E71C2;
+    background-color: rgba(187, 182, 204, 0.74);
     font-family: 'Montserrat', sans-serif;
     font-size: x-small;
     text-align: center;
